# PocketQSAR-v2

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/androidTest/java/com/abhi/pocketqsar/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: mobile_molecules.json
app/src/main/cpp/: CMakeLists.txt  Sme2Benchmark.cpp
app/src/main/java/com/abhi/pocketqsar/: ChemicalSpaceView.kt  DemoMolecule.kt  DemoMoleculeRepository.kt  DescriptorRadarView.kt  MainActivity.kt  ModelFileHelper.kt  MolecularSpaceActivity.kt  MolecularSpaceGLView.kt  MolecularSpaceRenderer.kt  MolecularSpaceViewModel.kt  QsarExecuTorch.kt  Sme2Benchmark.kt  Sme2BenchmarkActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/abhi/pocketqsar/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
